tests/ui/issues/issue-26056.stderr
error[E0038]: the trait `Map` is not dyn compatible
  --> $DIR/issue-26056.rs:20:17
   |
LL |         as &dyn Map<Key=u32,MapValue=u32>;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ `Map` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/issue-26056.rs:9:12
   |
LL | trait Map: MapLookup<<Self as Map>::Key> {
   |       ---  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...because it uses `Self` as a type parameter
   |       |
   |       this trait is not dyn compatible...

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
